--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -13,9 +13,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MeetEase"
-        tools:targetApi="31" >
+        tools:targetApi="31">
         <activity
-            android:name=".homeScreen.PreviousMeetingActivity"
+            android:name=".homeScreen.setting.SecurityActivity"
+            android:exported="false" />
+        <activity
+            android:name=".homeScreen.setting.AvailableRoomsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".homeScreen.createReservation.BookMeetingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".homeScreen.createReservation.CreateReservationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".homeScreen.previousMeeting.PreviousMeetingActivity"
             android:exported="false" />
         <activity
             android:name=".homeScreen.HomeScreenActivity"
@@ -28,7 +40,7 @@
             android:exported="false" />
         <activity
             android:name=".entryModule.SplashScreenActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
