--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,13 @@
         android:theme="@style/Theme.MeetEase"
         tools:targetApi="31">
         <activity
+            android:name=".ProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".homeScreen.setting.SecurityActivity"
             android:exported="false" />
         <activity
-            android:name=".homeScreen.setting.AvailableRoomsActivity"
+            android:name=".entryModule.WelcomeActivity"
             android:exported="false" />
         <activity
             android:name=".homeScreen.createReservation.BookMeetingActivity"
