--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -16,9 +18,6 @@
         tools:targetApi="31">
         <activity
             android:name=".homeScreen.setting.SecurityActivity"
-            android:exported="false" />
-        <activity
-            android:name=".homeScreen.setting.AvailableRoomsActivity"
             android:exported="false" />
         <activity
             android:name=".homeScreen.createReservation.BookMeetingActivity"
@@ -37,6 +36,9 @@
             android:exported="false" />
         <activity
             android:name=".entryModule.SignUpActivity"
+            android:exported="false" />
+        <activity
+            android:name=".entryModule.WelcomeActivity"
             android:exported="false" />
         <activity
             android:name=".entryModule.SplashScreenActivity"
