--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
             android:name=".homeScreen.ProfileActivity"
             android:exported="false" />
         <activity
-            android:name=".GuideActivity"
+            android:name=".entryModule.GuideActivity"
             android:exported="false" />
         <activity
             android:name=".entryModule.WelcomeActivity"
