--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
@@ -16,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MeetEase"
         tools:targetApi="31">
+        <activity
+            android:name=".ContactUsActivity"
+            android:exported="false" />
         <activity
             android:name=".homeScreen.setting.SecurityActivity"
             android:exported="false" />
