--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
             <action android:name="android.media.action.IMAGE_CAPTURE" />
         </intent>
     </queries>
+
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
@@ -25,6 +26,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MeetEase"
         tools:targetApi="31">
+        <activity
+            android:name=".homeScreen.createReservation.DetailsActivity"
+            android:exported="false" />
         <activity
             android:name=".homeScreen.setting.SecurityActivity"
             android:exported="false" />
@@ -67,6 +71,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.example.meetease"
