--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MeetEase"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name=".homeScreen.createReservation.DetailsActivity"
