--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -24,9 +24,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.MeetEase"
-        tools:targetApi="31">
+        android:usesCleartextTraffic="true"
+        tools:targetApi="31" >
+        <activity
+            android:name=".homeScreen.setting.AvailableRoomsActivity"
+            android:exported="false" />
         <activity
             android:name=".homeScreen.createReservation.DetailsActivity"
             android:exported="false" />
@@ -58,14 +61,14 @@
             android:name=".entryModule.GuideActivity"
             android:exported="false" />
         <activity
-            android:name=".ContactUsActivity"
+            android:name=".homeScreen.setting.ContactUsActivity"
             android:exported="false" />
         <activity
             android:name=".entryModule.WelcomeActivity"
             android:exported="false" />
         <activity
             android:name=".entryModule.SplashScreenActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -77,7 +80,7 @@
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.example.meetease"
             android:exported="false"
-            android:grantUriPermissions="true">
+            android:grantUriPermissions="true" >
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
