--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,6 @@ dependencies {
     implementation 'io.reactivex:rxjava:1.3.8'
     implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01"
+
+    implementation 'com.hbb20:ccp:2.5.1'
 }
