--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".homeScreen.createReservation.PaymentActivity"
+            android:exported="false" />
+        <activity
             android:name=".homeScreen.setting.FavoriteRoomActivity"
             android:exported="false" />
         <activity
