--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".SampleActivity"
+            android:exported="false" />
+        <activity
             android:name=".homeScreen.setting.NotificationActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
